# trailume

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml
apps/api/: .env.example  .gitignore  README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: errors.py  session.py
apps/api/app/api/routes/: __init__.py  activities.py  auth.py  recaps.py
apps/api/app/core/: config.py
apps/api/app/models/: contracts.py  domain.py
apps/api/app/services/analytics/: engine.py
apps/api/app/services/narrative/: __init__.py  deterministic.py  models.py  ollama.py  providers.py  service.py
apps/api/app/services/strava/: client.py  permissions.py  schemas.py  token_store.py
apps/api/tests/: test_analytics.py  test_analytics_engine_behaviors.py  test_config.py  test_contracts.py  test_map_data.py  test_narrative.py  test_narrative_service.py  test_routes.py  test_routes_integration.py  test_strava_client.py
apps/web/: .gitignore  jest.config.ts  jest.setup.ts  package.json
apps/web/src/__tests__/: activity-map-canvas.test.tsx  api.test.ts  dashboard-page.test.tsx  date-filters.test.ts  map-polyline.test.ts  map-section.test.tsx  recap-page.test.tsx
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: activity-map-canvas.tsx  distance-chart.tsx  hero-recap-section.tsx  highlight-cards-section.tsx  highlight-cards.tsx  insight-flags.tsx  map-section.tsx  metric-cards.tsx  narrative-text-section.tsx  route-map-placeholder.tsx  standout-activity-cards-section.tsx  (+3 more)
docs/: architecture.md
(+7 files in other folders)
