[project]
name = "trailume-api"
version = "0.1.0"
description = "Trailume MVP API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.6",
  "uvicorn>=0.34.0",
  "pydantic>=2.10.4",
  "pydantic-settings>=2.7.0",
  "httpx>=0.28.1",
  "python-dotenv>=1.0.1"
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.4",
  "pytest>=8.3.4"
]

[tool.ruff]
line-length = 100
target-version = "py313"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
