[project]
name = "trailume-api"
version = "0.1.0"
description = "Trailume MVP API"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.115.6",
  "uvicorn>=0.34.0",
  "pydantic>=2.10.4",
  "pydantic-settings>=2.7.0",
  "httpx>=0.28.1",
  "python-dotenv>=1.0.1",
]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.4"
ruff = ">=0.8.4"

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 100
target-version = "py313"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["."]
